2017-00-00 Guillaume LE VAILLANT <glv@posteo.net>
	Version 1.3.0
	Add option to print progress info regularly.

2016-11-27 Guillaume LE VAILLANT <guillaume.le.vaillant@openmailbox.org>
	Version 1.2.2
	Add bruteforcing speed and last tried password to progress info.

2016-06-06 Guillaume LE VAILLANT <guillaume.le.vaillant@openmailbox.org>
	Version 1.2.1
	Fix mutex for dictionary mode.

2016-01-10 Guillaume LE VAILLANT <guillaume.le.vaillant@openmailbox.org>
	Version 1.2.0
	Root privileges are not required anymore.

2015-10-31 Guillaume LE VAILLANT <guillaume.le.vaillant@openmailbox.org>
	Version 1.1
	Print progress info when sending a USR1 signal to the process.
	Support all the characters of the current locale (e.g. utf-8).
	Add the possibility to get the passwords from a file.

2014-07-06 Guillaume LE VAILLANT <guillaume.le.vaillant@openmailbox.org>
	Version 1.0