@@ -1,6 +1,7 @@
 2017-00-00 Guillaume LE VAILLANT <glv@posteo.net>
 	Version 1.3.0
 	Add option to print progress info regularly.
+	Add option to restore/save state from/to a file.
 
 2016-11-27 Guillaume LE VAILLANT <guillaume.le.vaillant@openmailbox.org>
 	Version 1.2.2
